Update annotations
