# api-rest/storage/api-docs/api-docs.json
@@ -97,31 +97,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "properties": {
-                                                    "name": {
-                                                        "type": "string",
-                                                        "example": "John"
-                                                    },
-                                                    "games_won_percentage": {
-                                                        "type": "number",
-                                                        "format": "float",
-                                                        "example": 50
-                                                    },
-                                                    "average_games_won_percentage": {
-                                                        "type": "number",
-                                                        "format": "float",
-                                                        "example": 50
-                                                    }
-                                                },
-                                                "type": "object"
-                                            }
-                                        }
-                                    },
-                                    "type": "object"
+                                    "$ref": "#/components/schemas/ListAllPlayersWithStats"
                                 }
                             }
                         }
@@ -161,7 +137,7 @@
                                     },
                                     "nickname": {
                                         "type": "string",
-                                        "example": "johndoe",
+                                        "example": "john_doe",
                                         "nullable": true
                                     },
                                     "email": {
@@ -227,28 +203,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "properties": {
-                                        "data": {
-                                            "properties": {
-                                                "name": {
-                                                    "type": "string",
-                                                    "example": "John"
-                                                },
-                                                "games_won_percentage": {
-                                                    "type": "number",
-                                                    "format": "float",
-                                                    "example": 50
-                                                },
-                                                "average_games_won_percentage": {
-                                                    "type": "number",
-                                                    "format": "float",
-                                                    "example": 50
-                                                }
-                                            },
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
+                                    "$ref": "#/components/schemas/ListPlayerGamesWithStats"
                                 }
                             }
                         }
@@ -517,7 +472,33 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Nickname updated successfully"
+                        "description": "Nickname updated successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Nickname updated successfully"
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "name": {
+                                                    "type": "string",
+                                                    "example": "John Doe"
+                                                },
+                                                "nickname": {
+                                                    "type": "string",
+                                                    "example": "john_doe"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "401": {
                         "description": "Unauthorized"
@@ -536,15 +517,98 @@
     },
     "components": {
         "schemas": {
+            "Player": {
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "name": {
+                        "type": "string",
+                        "example": "John Doe"
+                    },
+                    "nickname": {
+                        "type": "string",
+                        "example": "john"
+                    },
+                    "registered_at": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2020-01-01T00:00:00.000000Z"
+                    },
+                    "email": {
+                        "type": "string",
+                        "format": "email",
+                        "example": "jVHrj@example.com"
+                    },
+                    "email_verified_at": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2020-01-01T00:00:00.000000Z"
+                    },
+                    "created_at": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2020-01-01T00:00:00.000000Z"
+                    },
+                    "updated_at": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2020-01-01T00:00:00.000000Z"
+                    },
+                    "games_won_percentage": {
+                        "type": "number",
+                        "format": "float",
+                        "example": 40
+                    }
+                },
+                "type": "object"
+            },
+            "ListAllPlayersWithStats": {
+                "properties": {
+                    "data": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Player"
+                        }
+                    },
+                    "average_percentage_of_games_won": {
+                        "type": "number",
+                        "format": "float",
+                        "example": 12
+                    }
+                },
+                "type": "object"
+            },
             "Game": {
                 "properties": {
                     "dice_1": {
                         "type": "integer",
-                        "example": 1
+                        "example": 4
                     },
                     "dice_2": {
                         "type": "integer",
-                        "example": 2
+                        "example": 3
+                    },
+                    "result": {
+                        "type": "string",
+                        "example": "win"
+                    }
+                },
+                "type": "object"
+            },
+            "ListPlayerGamesWithStats": {
+                "properties": {
+                    "data": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Game"
+                        }
+                    },
+                    "games_won_percentage": {
+                        "type": "number",
+                        "format": "float",
+                        "example": 40
                     }
                 },
                 "type": "object"
